--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,22 @@
 {
-    "name": "deesoft/yii2-angular",
+    "name": "siddthartha/yii2-angular",
     "description": "Yii2 angular extension",
     "keywords": ["yii2", "angularjs"],
     "type": "yii2-extension",
     "license": "BSD-3-Clause",
     "support": {
-        "issues": "https://github.com/deesoft/yii2-angular/issues",
-        "source": "https://github.com/deesoft/yii2-angular"
+        "issues": "https://github.com/siddthartha/yii2-angular/issues",
+        "source": "https://github.com/siddthartha/yii2-angular"
     },
     "authors": [
         {
             "name": "Misbahul Munir",
             "email": "misbahuldmunir@gmail.com"
-        }
+        },
+	{
+	    "name": "Sadovnikov Anton",
+	    "email": "sadovnikoff@gmail.com"
+	}
     ],
     "require": {
         "yiisoft/yii2": ">=2.0.4",
